# ckan-downloader

./: .gitignore  pyproject.toml  readme.md
ckan_downloader/: __main__.py
