[tool.poetry]
name = "ckan-downloader"
version = "0.1.1"
description = "An interactive command-line utility for downloading data from a CKAN data portal"
authors = ["Eric McCowan <eric.mccowan@servian.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
